kelas kubernetes/02. kubernetes kelas lanjut/pdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pdb
spec:
  selector:
    app: nginx-pdb
  ports:
  - port: 80
    targetPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pdb
spec:
  replicas: 5 # jumlah 5 pod
  selector:
    matchLabels:
      app: nginx-pdb
  template:
    metadata:
      labels:
        app: nginx-pdb
    spec:
      containers:
      - name: nginx-pdb
        image: nginx:alpine
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
