kelas kubernetes/02. kubernetes kelas lanjut/pv-pvc-with-storageclass.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sc
spec:
  selector:
    matchLabels:
      app: nginx-sc
  template:
    metadata:
      labels:
        app: nginx-sc
    spec:
      volumes:
        - name: pvc-sc-volume
          persistentVolumeClaim:
            claimName: pvc-sc
      containers:
      - name: nginx-sc
        image: nginx:alpine
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: pvc-sc-volume

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-sc
spec:
  selector:
    app: nginx-sc
  ports:
  - port: 80
    targetPort: 80
